--- a/zsh.org
+++ b/zsh.org
@@ -3,7 +3,8 @@
 - ~/.zshrc
 - ~/.zsh
 * Tasks
-* TODO Check sharing history setting.
+** TODO Check sharing history setting.
 # Disable sharing history.
 # Only here as a reminder, look to see if this interferes with tmux.
 # setopt NO_SHARE_HISTORY
+** TODO Merge zshrc/zshenv with .zshrc/.zshenv + check diff.
